--- a/tour.css
+++ b/tour.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+*, html {
+
+    scroll-behavior: smooth !important;
+}
 * {
     margin: 0;
     padding: 0;
