--- a/tour.css
+++ b/tour.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*, html {
-
-    scroll-behavior: smooth !important;
-}
 * {
+    scroll-behavior: smooth! important;
     margin: 0;
     padding: 0;
     font-family: "Mona Sans", "Mona Sans Fallback", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -77,6 +74,7 @@ html {
     font-size: 40px;
 }
 .content {
+    overflow-y: hidden;
     scroll-behavior: smooth;
     display: flex;
     width: 100%;
@@ -88,14 +86,15 @@ html {
     height: 93.8vh;
     scroll-snap-align: center;
     flex: none;
+    position: relative;
 }
 .pic-inhead {
     text-align: center;
     height: 150px;
 }
 .pic-smalltour {
-    width: 230px;
-    height: 150px;
+    width: 180px;
+    height: 140px;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -143,18 +142,6 @@ html {
     position: absolute;
     left: 78%;
     top: 150%;
-}
-.tour-price {
-    font-size: 25px;
-    margin-right: 20px;
-    margin-left: 2%;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    float: left;
-    width: 45%;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.89);
 }
 .tour-pic {
     width: 45%;
@@ -210,11 +197,14 @@ table {
 #phare {
     position: relative;
 }
+#kampongphluk, #cyclingtour, #streetfoodtour, #cookingclass {
+    position: relative;
+}
 .phare-pic {
-    width: 250px;
+    width: 170px;
     position: absolute;
-    top: 33%;
-    left: 27%;
+    top: 34%;
+    left: 29.7%;
 }
 .share-left {
     position: absolute;
@@ -227,6 +217,12 @@ table {
     right: 3%;
     width: 45%;
     top: 35%;
+}
+.tshare-left {
+    position: absolute;
+    left: 3%;
+    width: 45%;
+    margin-top: 20px;
 }
 .gshare-left {
     position: absolute;
@@ -268,14 +264,13 @@ section {
     bottom: 14%;
 }
 .qrpic {
-    width: 130px;
+    width: 90px;
 }
 .ticket-note {
     position: absolute;
-    width: 45%;
-    float: right;
-    right: 3%;
-    bottom: 0;
+    width: 49%;
+    right: 2%;
+    bottom: 20px;
     background-color: rgba(63, 91, 115, 0.852);
     color: white;
     padding-left: 15px;
@@ -301,9 +296,6 @@ section {
 #bengmealea, #banteaysrei, #kohker, #smalltour, #grandtour {
     position: relative;
 }
-a {
-    color: aqua;
-}
 .smalltour-temple {
     color: rgb(199, 67, 67);
     background-color: white;
@@ -313,10 +305,11 @@ a {
     height: 100%;
 }
 .kp-pic {
-    margin-top: 20px;
+    margin-top: 10px;
     box-shadow: 0px 0px 20px 1px;
     width: 90%;
-    height: 400px;
+    height: 350px;
+    margin-left: 25px;
 }
 .buspic {
     height: 10px;
@@ -408,8 +401,8 @@ img {
 }
 .bus-border {
     color: white;
-    font-size: 25px;
-    background-color: #314d6e;
+    font-size: 20px;
+    background-color: #103b50;
     height: 55px;
     border: 1px solid rgb(140, 139, 139);
 }
@@ -446,16 +439,20 @@ img {
     width: 45%;
 }
 .giantlogo {
-    width: 200px;
-    padding-left: 10px;
+    top: 5px;
+    position: absolute;
+    left: 10px;
+    width: 160px;
 }
 .giantbus {
     margin-top: 10px;
     width: 180px;
 }
 .giantsleepbus {
-    margin-top: 10px;
+    position: absolute;
     width: 160px;
+    right: 10px;
+    bottom: 0;
 }
 .airbuslogo {
     width: 70px;
@@ -473,12 +470,19 @@ img {
     width: 130px;
 }
 .vetvan2 {
-    margin-top: 20px;
-    width: 100px;
+    top: 30px;
+    right: 5px;
+    position: absolute;
+    width: 120px;
 }
 .vetvan {
-    margin-top: 20px;
-    width: 100px;
+    top: 45px;
+    right: 80px;
+    position: absolute;
+    width: 120px;
+}
+.luxurybus {
+    width: 120px;
 }
 .minibus {
     margin-top: 15px;
@@ -496,9 +500,10 @@ img {
     width: 150px;
 }
 .bus-tittle {
+    position: absolute;
     text-align: center;
-    float: left;
     width: 45%;
+    bottom: 10px;
 }
 .airport-tittle {
     text-align: center;
@@ -514,6 +519,7 @@ img {
     border-spacing: 0;
 }
     .buscompany {
+        position: relative;
         height: 120px;
         font-weight: bold;
         background-color: rgba(255, 255, 255, 0.559);
@@ -547,6 +553,9 @@ h2 {
     margin: 0;
 }
 h1 {
+    padding-top: 10px;
+    font-size: 40px;
+    padding-bottom: 10px;
     color: white;
     background-color: none;
     text-align: center;
@@ -565,7 +574,7 @@ h1 {
 }
 .price {
     border: 1px solid grey;
-    width: 120px;
+    width: 180px;
 }
 .buspicture {
     border: none;
@@ -577,8 +586,8 @@ h1 {
 }
 ::-webkit-scrollbar{
     height: 44px;
-    width: 10px;
-    background: rgba(48, 23, 23, 0);
+    width: 150px;
+    background: rgb(5, 33, 33);
 }
 
 /* Track */
@@ -588,55 +597,28 @@ h1 {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
-  background-image: linear-gradient(90deg, #d89309 0%, #070c1a 99%);
+  background: linear-gradient(30deg,rgb(3, 66, 68) , rgb(25, 85, 87), rgb(225, 16, 20)) ; 
   box-shadow: inset 2px 2px 5px 0 rgba(#000000, 0.5);
-  border-radius: 100px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
-
+::-webkit-scrollbar:horizontal{
+    height: 44px;
+    width: 150px;
+    background: rgb(15, 78, 78);
+}
 ::-webkit-scrollbar-thumb:horizontal{
-    background: #000;
-    border-radius: 0;
+    background: linear-gradient(30deg, rgb(18, 168, 238), rgb(19, 152, 156), rgb(13, 106, 109)) ;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 20px;
 }
-.icon {
-    padding-bottom: 40px;
-    text-align: center;
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 5%;
-    bottom: 0;
-}
-.tour-icon {
-    position: absolute;
-    color: #ffffff;
-    left: 14%;
-}
-.bus-icon {
-    position: absolute;
-    color: #ffffff;
-    left: 49%;
-}
-.airport-icon {
-    position: absolute;
-    color: #ffffff;
-    width: 100px;
-    right: 13%;
-}
-.material-symbols-outlined {
-    color: #290101;
-    font-size: 40px;
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-  }
 .border-float {
     position: relative;
+    width: 47%;
     float: right;
-    width: 45%;
-    height: 600px;
+    margin-right: 30px;
+
 }
 .carousel {
     width: 100%;
@@ -645,17 +627,12 @@ h1 {
   
   .carousel__viewport {
     width: 100%;
-    height: 87%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 80%;
     display: flex;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
   }
   .carousel__slide {
-    padding-left: 40px;
     position: relative;
     flex: 0 0 100%;
     width: 100%;
@@ -663,10 +640,9 @@ h1 {
   } 
 .carousel__snapper {
     position: absolute;
+    width: 100%;
     top: 0;
     left: 0;
-    width: 97%;
-    height: 100%;
     scroll-snap-align: center;
   }
 .carousel__viewport::-webkit-scrollbar {
@@ -681,28 +657,40 @@ h1 {
     width: 100%;
     height: 100px;
 }
-.grandtour-price {
+.fade-table {
+    scale: 0.8; opacity: 0;
+    animation: fade-in linear forwards;
+    animation-timeline: view();
+    animation-range-start: 0%;
+    animation-range-end: 25%;
+}
+@keyframes fade-in {
+    to {scale: 1; opacity: 1;}
+}
+.fade-table2 {
+    scale: 0.8; opacity: 0;
+    animation: fade-in2 linear forwards;
+    animation-timeline: view();
+    animation-range-start: -20%;
+    animation-range-end: 45%;
+}
+@keyframes fade-in2 {
+    to {scale: 1; opacity: 1;}
+}
+.tour-price {
     text-shadow: 3px 3px 5px rgba(29, 28, 28, 0.541);
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
     background: linear-gradient(30deg, rgb(175, 171, 166), rgb(201, 181, 93), rgb(221, 184, 81)) ;
-    font-size: 25px;
+    font-size: 23px;
     box-shadow: 0px 0px 10px 2px;
     padding-left: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
     border: 1px solid;
     margin-bottom: 15px;
-    width: 500px;
-    scale: 0; opacity: 0;
-    animation: fade-in linear forwards;
-    animation-timeline: view();
-    animation-range-start: -20%;
-    animation-range-end: 25%;
-}
-@keyframes fade-in {
-    to {scale: 1; opacity: 1;}
+    width: 450px;
 }
 .smalltour-price {
     text-shadow: 3px 3px 5px rgba(29, 28, 28, 0.541);
@@ -710,14 +698,14 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     background: linear-gradient(30deg, rgb(175, 171, 166), rgb(201, 181, 93), rgb(221, 184, 81)) ;
-    font-size: 25px;
+    font-size: 23px;
     box-shadow: 0px 0px 10px 2px;
     padding-left: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
     border: 1px solid;
     margin-bottom: 15px;
-    width: 500px;
+    width: 450px;
     animation: sfade-in 1s ease reverse;
 }
 @keyframes sfade-in {
@@ -728,3 +716,142 @@ h1 {
         opacity: 0;
     }
 }
+.list-bus {
+    z-index: 80;
+    width: 150px;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    list-style-type: none;
+    background-color: #04040400;
+}
+.top-bus {
+    padding-top: 15px;
+}
+.li-bus {
+    color: rgb(255, 255, 255);
+    padding-left: 5px;
+    text-align: left;
+    padding-bottom: 28.5px;
+    font-size: 19px;
+}
+a {
+    text-decoration: none;
+    font-weight:600;
+    color: white;
+}
+.icon-btn {
+    width: 400px;
+    height: 44px;
+    text-align: center;
+    font-size: 25px;
+    position: absolute;
+    bottom: 0;
+}
+.middle-btn {
+    bottom: 0;
+    left: 400px;
+}
+.right-btn {
+    right: 0;
+}
+.left-btn {
+    left: 0;
+}
+.bus-icon {
+    left: 34%;
+    bottom: 3px;
+    position: absolute;
+    width: 30px;
+}
+.tour-icon {
+    left: 30%;
+    bottom: 3px;
+    position: absolute;
+    width: 35px;
+}
+.shuttle-icon {
+    left: 17%;
+    bottom: 3px;
+    position: absolute;
+    width: 40px;
+}
+.text-icon {
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    padding-top: 6px;
+}
+.list-tour {
+    z-index: 80;
+    width: 150px;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    list-style-type: none;
+    background-color: #04040400;
+}
+.top-tour {
+    padding-top: 20px;
+}
+.li-tour {
+    color: rgb(255, 255, 255);
+    padding-left: 5px;
+    text-align: left;
+    padding-bottom: 39px;
+    font-size: 19px;
+}
+#phnompenh,
+#phnompenh-night,
+#sihanoukville,
+#kr-krs,
+#battambang,
+#preahvihear,
+#stuengtreng,
+#rattanakiri,
+#mondolkiri,
+#kampot,
+#bangkok,
+#hochiminh
+{
+    position: relative;
+}
+.scroll-icon {
+    left: 15%;
+    transform: translateY(0%) rotate(45deg);
+    
+                  opacity: 0;
+  }
+  @keyframes scrolldown {
+              0%{
+                  transform: translateY(20%) rotate(45deg);
+                  opacity: 0.7;
+              }
+              50%{
+                  transform: translateY(0%) rotate(45deg);
+                  opacity: 0.2;
+              }
+              100%{
+                  transform: translateY(20%) rotate(45deg);
+                  opacity: 0.7;
+              }
+          }
+.scroll-icon-up {
+    left: 90%;
+    transform: translateY(0%) rotate(225deg);
+    
+                  opacity: 0;
+  }
+  @keyframes scrollup {
+              0%{
+                  transform: translateY(20%) rotate(225deg);
+                  opacity: 0.7;
+              }
+              50%{
+                  transform: translateY(0%) rotate(225deg);
+                  opacity: 0.2;
+              }
+              100%{
+                  transform: translateY(20%) rotate(225deg);
+                  opacity: 0.7;
+              }
+          }
