--- a/tour.css
+++ b/tour.css
@@ -6,7 +6,7 @@
     font-family: "Mona Sans", "Mona Sans Fallback", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 body {
-    background: linear-gradient(30deg, rgb(58, 115, 141), rgb(25, 85, 87), rgb(3, 66, 68)) ;
+    background: rgb(17, 56, 71);
 }
 html {
     scroll-behavior: smooth;
@@ -197,14 +197,12 @@ table {
 #phare {
     position: relative;
 }
-#kampongphluk, #cyclingtour, #streetfoodtour, #cookingclass {
+#kampongphluk, #cyclingtour, #streetfoodtour, #cookingclass, #ceramic {
     position: relative;
 }
 .phare-pic {
-    width: 150px;
-    position: absolute;
-    top: 32%;
-    left: 31%;
+    width: 350px;
+    margin-top: 90%;
 }
 .share-left {
     position: absolute;
@@ -587,28 +585,36 @@ h1 {
 ::-webkit-scrollbar{
     height: 44px;
     width: 150px;
-    background: rgb(5, 33, 33);
+    background: rgb(18, 27, 32);
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ffffff00; 
+  background: #582b2b00; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(30deg,rgb(3, 66, 68) , rgb(25, 85, 87), rgb(225, 16, 20)) ; 
-  box-shadow: inset 2px 2px 5px 0 rgba(#000000, 0.5);
+    border-top: solid rgb(18, 27, 32);
+    border-right: solid rgb(18, 27, 32);
+    border-bottom: solid rgb(18, 27, 32);
+    box-shadow:  rgb(17, 56, 71) 0px 0px 0px 5px;
+    background: rgb(17, 56, 71);
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
 ::-webkit-scrollbar:horizontal{
     height: 44px;
     width: 150px;
-    background: rgb(15, 78, 78);
+    background: rgb(157, 161, 163);
 }
 ::-webkit-scrollbar-thumb:horizontal{
-    background: linear-gradient(30deg, rgb(18, 168, 238), rgb(19, 152, 156), rgb(13, 106, 109)) ;
+    border-top: none;
+    border-left: solid rgb(157, 161, 163);
+    border-right: solid rgb(157, 161, 163);
+    border-bottom: solid rgb(157, 161, 163);
+    box-shadow:  rgb(16, 56, 71) 0px 0px 0px 5px;
+    background: rgb(17, 56, 71);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-left-radius: 20px;
@@ -648,10 +654,12 @@ h1 {
 .carousel__viewport::-webkit-scrollbar {
     width: 10px;
     height: 10px;
+    background-color: rgba(255, 255, 255, 0);
 }
 .carousel__viewport::-webkit-scrollbar-thumb:horizontal{
+    border: none;
     border-radius: 80px;
-    background-image: linear-gradient(90deg, #d89309 0%, #070c1a 99%);
+    background-image: linear-gradient(90deg, #264e5a 0%, #070c1a 99%);
 }
 .head-pic {
     width: 100%;
@@ -682,7 +690,7 @@ h1 {
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    background: linear-gradient(30deg, rgb(175, 171, 166), rgb(201, 181, 93), rgb(221, 184, 81)) ;
+    background: linear-gradient(30deg, rgb(204, 221, 214), rgb(189, 208, 204), rgb(187, 238, 223)) ;
     font-size: 23px;
     box-shadow: 0px 0px 10px 2px;
     padding-left: 10px;
@@ -692,12 +700,30 @@ h1 {
     margin-bottom: 15px;
     width: 450px;
 }
+.ceramic-price {
+    position: absolute;
+    top: 40%;
+    text-shadow: 3px 3px 5px rgba(29, 28, 28, 0.541);
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background: linear-gradient(30deg, rgb(204, 221, 214), rgb(189, 208, 204), rgb(187, 238, 223)) ;
+    font-size: 23px;
+    box-shadow: 0px 0px 10px 2px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border: 1px solid;
+    margin-bottom: 15px;
+    width: 450px;
+    height: 350px;
+}
 .smalltour-price {
     text-shadow: 3px 3px 5px rgba(29, 28, 28, 0.541);
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    background: linear-gradient(30deg, rgb(175, 171, 166), rgb(201, 181, 93), rgb(221, 184, 81)) ;
+    background: linear-gradient(30deg, rgb(204, 221, 214), rgb(189, 208, 204), rgb(187, 238, 223)) ;
     font-size: 23px;
     box-shadow: 0px 0px 10px 2px;
     padding-left: 10px;
@@ -730,9 +756,9 @@ h1 {
 }
 .li-bus {
     color: rgb(255, 255, 255);
-    padding-left: 5px;
+    padding-left: 10px;
     text-align: left;
-    padding-bottom: 37px;
+    padding-bottom: 32.5px;
     font-size: 17px;
 }
 a {
@@ -750,7 +776,7 @@ a {
 }
 .middle-btn {
     bottom: 0;
-    left: 450px;
+    left: 400px;
 }
 .right-btn {
     right: 0;
@@ -759,8 +785,8 @@ a {
     left: 0;
 }
 .bus-icon {
-    left: 35%;
-    bottom: 3px;
+    left: 34%;
+    bottom: 5px;
     position: absolute;
     width: 30px;
 }
@@ -795,10 +821,10 @@ a {
 }
 .li-tour {
     color: rgb(255, 255, 255);
-    padding-left: 5px;
+    padding-left: 10px;
     text-align: left;
-    padding-bottom: 50px;
-    font-size: 17px;
+    padding-bottom: 38.4px;
+    font-size: 16px;
 }
 #phnompenh,
 #phnompenh-night,
@@ -855,3 +881,79 @@ a {
                   opacity: 0.7;
               }
           }
+
+          .card {
+            perspective: 1000px;
+            cursor: pointer;
+            transition: transform 1s;
+            transform-style: preserve-3d;
+            }
+            
+            .card.flipped {
+            transform: rotateY( 180deg );
+            }
+            
+            .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            }
+            
+            .card-back {
+            transform: rotateY(180deg);
+            }
+            .ceramicqr {
+                width: 300px;
+            }
+            .ceramic-scan {
+                padding-top: 5px;
+                text-align: center;
+            }
+            .fullscreen {
+                z-index: 180;
+                position: absolute;
+                width: 50px;
+                height: 50px;
+                top: 0;
+                right: 50px;
+                background: #31de28;
+                color: white;
+                font-weight: bold;
+                font-size: 40px;
+            }
+            .unfullscreen {
+                z-index: 180;
+                position: absolute;
+                width: 50px;
+                height: 50px;
+                top: 0;
+                right: 0;
+                background: #c41903;
+                color: white;
+                font-weight: bold;
+                font-size: 40px;
+            }
+            .btn-open-top {
+                position: absolute;
+                top: -6px;
+                right: 4.5px;
+            }
+            .btn-open-bottom {
+                position: absolute;
+                top: -6px;
+                right: 4.5px;
+            }
+            .btn-close-top {
+                position: absolute;
+                top: -25px;
+                right: 5px;
+            }
+            .btn-close-bottom {
+                position: absolute;
+                bottom: -20px;
+                right: 5px;
+            }
